--- a/src/net/MvvmDialogs.csproj
+++ b/src/net/MvvmDialogs.csproj
@@ -3,12 +3,11 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>default</LangVersion>
     <!--
       Lets have the .NET Framework version listed first, otherwise we will get build warnings in Visual Studio.
       See https://github.com/dotnet/project-system/issues/1162 for more information.
      -->
-    <TargetFrameworks>net472;net462;net452;net45;net40;net35;netcoreapp3.1;net5.0-windows</TargetFrameworks>
     <AssemblyTitle>MVVM Dialogs</AssemblyTitle>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
     <SignAssembly>true</SignAssembly>
@@ -16,6 +15,7 @@
     <UseWpf>true</UseWpf>
     <UseWindowsForms>true</UseWindowsForms>
     <Nullable>enable</Nullable>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
@@ -63,6 +63,10 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Runtime" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
