--- a/src/MvvmDialogs.Wpf/MvvmDialogs.Wpf.csproj
+++ b/src/MvvmDialogs.Wpf/MvvmDialogs.Wpf.csproj
@@ -7,10 +7,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>default</LangVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\StrongName.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MvvmDialogs.Core\MvvmDialogs.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\StrongName.snk">
+      <Link>StrongName.snk</Link>
+    </None>
   </ItemGroup>
 
 </Project>
