--- a/samples/net-core/Demo.MessageBox/Demo.MessageBox.Core.csproj
+++ b/samples/net-core/Demo.MessageBox/Demo.MessageBox.Core.csproj
@@ -6,14 +6,16 @@
     <UseWPF>true</UseWPF>
     <RootNamespace>Demo.MessageBox</RootNamespace>
     <AssemblyName>Demo.MessageBox</AssemblyName>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\net\MvvmDialogs.Core.csproj" />
+    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
+    <ProjectReference Include="..\..\..\src\MvvmDialogs.Core\MvvmDialogs.Core.csproj" />
+    <ProjectReference Include="..\..\..\src\MvvmDialogs.Wpf\MvvmDialogs.Wpf.csproj" />
   </ItemGroup>
 
 </Project>
