--- a/samples/net-core/Demo.ModalDialog/Demo.ModalDialog.Core.csproj
+++ b/samples/net-core/Demo.ModalDialog/Demo.ModalDialog.Core.csproj
@@ -9,11 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\net\MvvmDialogs.Core.csproj" />
+    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
+    <ProjectReference Include="..\..\..\src\MvvmDialogs.Core\MvvmDialogs.Core.csproj" />
+    <ProjectReference Include="..\..\..\src\MvvmDialogs.Wpf\MvvmDialogs.Wpf.csproj" />
   </ItemGroup>
 
 </Project>
