--- a/samples/net-core/Demo.CustomSaveFileDialog/Demo.CustomSaveFileDialog.Core.csproj
+++ b/samples/net-core/Demo.CustomSaveFileDialog/Demo.CustomSaveFileDialog.Core.csproj
@@ -6,6 +6,7 @@
     <UseWPF>true</UseWPF>
     <RootNamespace>Demo.CustomSaveFileDialog</RootNamespace>
     <AssemblyName>Demo.CustomSaveFileDialog</AssemblyName>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
