--- a/samples/Avalonia/Demo.FolderBrowserDialog/Demo.FolderBrowserDialog.csproj
+++ b/samples/Avalonia/Demo.FolderBrowserDialog/Demo.FolderBrowserDialog.csproj
@@ -6,8 +6,6 @@
     <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
-    <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
   </ItemGroup>
   <ItemGroup>
@@ -17,4 +15,8 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.10" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.10" />
   </ItemGroup>
-</Project>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\MvvmDialogs.Avalonia\MvvmDialogs.Avalonia.csproj" />
+    <ProjectReference Include="..\..\..\src\MvvmDialogs\MvvmDialogs.csproj" />
+  </ItemGroup>
+  </Project>
