--- a/samples/Avalonia/Demo.ModalCustomDialog/Demo.ModalCustomDialog.csproj
+++ b/samples/Avalonia/Demo.ModalCustomDialog/Demo.ModalCustomDialog.csproj
@@ -6,8 +6,6 @@
     <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
-    <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
   </ItemGroup>
   <ItemGroup>
@@ -16,5 +14,9 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.10" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.10" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\MvvmDialogs.Avalonia\MvvmDialogs.Avalonia.csproj" />
+    <ProjectReference Include="..\..\..\src\MvvmDialogs\MvvmDialogs.csproj" />
   </ItemGroup>
 </Project>
